feb2026 updates due to spotify API changes
